--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
-<p>Hello, </p>
 
-<td th:text="${username} ? ${username} : 'nobody'"></td>
+<!-- Nav Bar -->
+<div th:insert="fragments/navbar.html"></div>
+
+<div class="page-container">
+    <div class="intro-section">
+        <h1>Welcome to Recipe App</h1>
+        <p>You can find fun and new recipes to try here or post your own!</p>
+        <p>You can also leave comments on other people's recipes and check</p>
+        <p>their user pages to check what recipes they have published!</p>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
 </body>
 </html>
